--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>New Vite App</title>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap"
+    />
   </head>
   <body>
     <div id="root"></div>
